# raredog

./: CMakeLists.txt  package.xml
config/: controllers.yaml
description/: back_left_leg.xacro  back_right_leg.xacro  base.xacro  front_left_leg.xacro  front_right_leg.xacro  gazebo_reference.xacro  raredog.urdf.xacro  ros2_control.xacro
launch/: display.launch.py  gazebo.launch.py  ros2_control.launch.py
scripts/: jgp_publisher.py
